@@ -61,6 +61,15 @@ protected:
 
     // the hash map indexed by the names of the files stored in the memory FS
     static wxMemoryFSHash m_Hash;
+
+    // the file name currently being searched for, i.e. the argument of the
+    // last FindFirst() call or empty string if FindFirst() hasn't been called
+    // yet or FindNext() didn't find anything
+    wxString m_findArgument;
+
+    // iterator into m_Hash used by FindFirst/Next(), possibly m_Hash.end() or
+    // even invalid (can only be used when m_findArgument is not empty)
+    wxMemoryFSHash::const_iterator m_findIter;
 };
 
 // ----------------------------------------------------------------------------
